# mcp-practice

./: pyproject.toml  requirements.txt
src/01_FirstMcpServer/: client.py  server.py
src/02_TransportMethods/: client.py  server.py
