[project]
name = "mcp-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "fastapi>=0.129.2",
    "langchain>=1.2.10",
    "langgraph>=1.0.9",
    "mcp>=1.26.0",
    "ollama>=0.6.1",
    "uvicorn>=0.41.0",
]
